<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_screen">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/myscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_margin="@dimen/activity_horizontal_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorTextColor="@color/accent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kinnds"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:tooltipText="Name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/accent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_trademark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:hint="@string/tradeMark"
                    android:tooltipText="Name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_sellingprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:hint="@string/selling"
                    android:inputType="number"
                    android:tooltipText="Name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_purchaseprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:hint="@string/purchasing"
                    android:inputType="number"
                    android:tooltipText="Name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/accent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_quantity_per_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:hint="@string/quantity"
                    android:tooltipText="Name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_et_available_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:hint="@string/available_quantity"
                    android:inputType="number"
                    android:tooltipText="Name" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:id="@+id/Add_btn_product_save"
                android:text="Save"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:id="@+id/Add_btn_main"
                android:text="Main menu"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/design_default_color_primary"
            app:expandedTitleMarginStart="26dp"
            app:expandedTitleMarginEnd="10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/details_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/design_default_color_primary"
                android:src="@drawable/new_product"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"/>
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>