<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_screen">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/myscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_margin="@dimen/activity_horizontal_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorTextColor="@color/accent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/allipurchased_no_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_of_cat"
                    android:enabled="false"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:tooltipText="Name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/accent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/allpurchased_no_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:enabled="false"
                    android:hint="@string/no_of_purchasedproducts"
                    android:tooltipText="Name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/accent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/allpurchased_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/edittxtmarg"
                    android:enabled="false"
                    android:hint="@string/allpayments_value"
                    android:tooltipText="Name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/allpurchased_btn_main"
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Main Page"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/design_default_color_primary"
            app:expandedTitleMarginStart="26dp"
            app:expandedTitleMarginEnd="10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/details_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/design_default_color_primary"
                android:src="@drawable/reducing_costs_590x315"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"/>
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>